# Centaur_Control

./: CMakeLists.txt  conanfile.txt  package.xml
scripts/: build.sh  install_dependencies.sh
src/: main.cpp
src/communication/: ros2_interface.cpp  ros2_interface.h
src/core/: application.cpp  application.h
src/ui/: main_window.cpp  main_window.h  main_window.ui
src/ui/widgets/: camera_display_widget.cpp  camera_display_widget.h  robot_status_widget.cpp  robot_status_widget.h  slam_visualization_widget.cpp  slam_visualization_widget.h
src/utils/: logger.cpp  logger.h
